--- a/index.html
+++ b/index.html
@@ -18,6 +18,10 @@
   <input type="email" id="email" name="user_email">
   <input type="password" id="password" name="user_password">
 
+  <textarea id="bio" name="user_bio"></textarea>
+
+  <button type="submit">Sign Up</button>
+
 </form>
 
 </body>
