--- a/index.html
+++ b/index.html
@@ -14,10 +14,16 @@
 
   <h1>Sign Up</h1>
 
+  <label for="name">Name</label>
   <input type="text" id="name" name="user_name">
+
+  <label for="email">Email</label>
   <input type="email" id="email" name="user_email">
+
+  <label for="password">Password</label>
   <input type="password" id="password" name="user_password">
 
+  <label for="bio">About You</label>
   <textarea id="bio" name="user_bio"></textarea>
 
   <button type="submit">Sign Up</button>
