--- a/index.html
+++ b/index.html
@@ -14,17 +14,25 @@
 
   <h1>Sign Up</h1>
 
-  <label for="name">Name</label>
-  <input type="text" id="name" name="user_name">
+  <fieldset>
 
-  <label for="email">Email</label>
-  <input type="email" id="email" name="user_email">
+    <label for="name">Name</label>
+    <input type="text" id="name" name="user_name">
 
-  <label for="password">Password</label>
-  <input type="password" id="password" name="user_password">
+    <label for="email">Email</label>
+    <input type="email" id="email" name="user_email">
 
-  <label for="bio">About You</label>
-  <textarea id="bio" name="user_bio"></textarea>
+    <label for="password">Password</label>
+    <input type="password" id="password" name="user_password">
+
+  </fieldset>
+
+  <fieldset>
+
+    <label for="bio">Short Bio</label>
+    <textarea id="bio" name="user_bio"></textarea>
+    
+  </fieldset>
 
   <button type="submit">Sign Up</button>
 
