--- a/index.html
+++ b/index.html
@@ -27,6 +27,10 @@
     <label for="password">Password</label>
     <input type="password" id="password" name="user_password">
 
+    <label>Age</label>
+    <input type="radio" id="under_13" value="under_13" name="user_age"><label for="under_13" class="light">Under 13</label><br>
+    <input type="radio" id="over_13" value="over_13" name="user_age"><label for="over_13" class="light">13 or Older</label>
+
   </fieldset>
 
   <fieldset>
@@ -46,6 +50,11 @@
       <option value="ux">UX Designer</option>
       <option value="ui">UI Designer</option> 
     </select>
+
+    <label>Interests</label>
+    <input type="checkbox" id="web" value="interest_web" name="user_interest"><label for="web" class="light">Web Development</label><br>
+    <input type="checkbox" id="design" value="interest_design" name="user_interest"><label for="design" class="light">Design</label><br>
+    <input type="checkbox" id="mobile" value="interest_mobile" name="user_interest"><label for="mobile" class="light">Mobile Development</label><br>
 
   </fieldset>
 
